src/snapshots/pbsql__path_convertor__tests__union_separate_scopes.snap
---
source: src/path_convertor.rs
expression: translate_result
---
Ok:
  - ~/books/non-things: main
    ~/books/things: db1
  - - SELECT
    - "  \"~/books/things\".id,"
    - "  \"~/books/things\".title"
    - FROM
    - "  main.table_contents AS \"~/books/things\""
    - UNION
    - SELECT
    - "  db1.table_contents.id,"
    - "  db1.table_contents.title"
    - FROM
    - "  db1.table_contents"
  - - Query:
        with: ~
        body:
          SetOperation:
            op: Union
            set_quantifier: None
            left:
              Select:
                distinct: ~
                top: ~
                projection:
                  - UnnamedExpr:
                      CompoundIdentifier:
                        - value: ~/books/things
                          quote_style: "\""
                        - value: id
                          quote_style: ~
                  - UnnamedExpr:
                      CompoundIdentifier:
                        - value: ~/books/things
                          quote_style: "\""
                        - value: title
                          quote_style: ~
                into: ~
                from:
                  - relation:
                      Table:
                        name:
                          - value: main
                            quote_style: ~
                          - value: table_contents
                            quote_style: ~
                        alias:
                          name:
                            value: ~/books/things
                            quote_style: "\""
                          columns: []
                        args: ~
                        with_hints: []
                        version: ~
                        partitions: []
                    joins: []
                lateral_views: []
                selection: ~
                group_by:
                  Expressions: []
                cluster_by: []
                distribute_by: []
                sort_by: []
                having: ~
                named_window: []
                qualify: ~
            right:
              Select:
                distinct: ~
                top: ~
                projection:
                  - UnnamedExpr:
                      CompoundIdentifier:
                        - value: db1
                          quote_style: ~
                        - value: table_contents
                          quote_style: ~
                        - value: id
                          quote_style: ~
                  - UnnamedExpr:
                      CompoundIdentifier:
                        - value: db1
                          quote_style: ~
                        - value: table_contents
                          quote_style: ~
                        - value: title
                          quote_style: ~
                into: ~
                from:
                  - relation:
                      Table:
                        name:
                          - value: db1
                            quote_style: ~
                          - value: table_contents
                            quote_style: ~
                        alias: ~
                        args: ~
                        with_hints: []
                        version: ~
                        partitions: []
                    joins: []
                lateral_views: []
                selection: ~
                group_by:
                  Expressions: []
                cluster_by: []
                distribute_by: []
                sort_by: []
                having: ~
                named_window: []
                qualify: ~
        order_by: []
        limit: ~
        limit_by: []
        offset: ~
        fetch: ~
        locks: []
        for_clause: ~
