src/snapshots/pbsql__path_convertor__tests__unsupported_statement_type.snap
---
source: src/path_convertor.rs
expression: translate_result
---
Err: "not implemented: Statement::Close"
